# UnifiedFormat

./: .gitignore  CMakeLists.txt  NSCLDAQFormatFactorySelector.cpp  NSCLDAQFormatFactorySelector.h  README.md  selectortests.cpp
abstract/: Asserts.h  CAbnormalEndItem.cpp  CAbnormalEndItem.h  CDataFormatItem.cpp  CDataFormatItem.h  CGlomParameters.cpp  CGlomParameters.h  CMakeLists.txt  CMutex.cpp  CMutex.h  CPhysicsEventItem.cpp  CPhysicsEventItem.h  CRingFragmentItem.cpp  CRingFragmentItem.h  CRingItem.cpp  CRingItem.h  CRingPhysicsEventCountItem.cpp  CRingPhysicsEventCountItem.h  CRingScalerItem.cpp  CRingScalerItem.h  CRingStateChangeItem.cpp  CRingStateChangeItem.h  CRingTextItem.cpp  CRingTextItem.h  CUnknownFragment.cpp  CUnknownFragment.h  DataFormat.h  FragmentIndex.cpp  FragmentIndex.h  RingItemFactoryBase.h  abendabtests.cpp  counterabtests.cpp  dformatabtests.cpp  fragabtests.cpp  fragment.cpp  fragment.h  glomabtests.cpp  io.cpp  io.h  physabtests.cpp  (+5 more)
cmake/: FindCppUnit.cmake
datasource/: CMakeLists.txt  DataSource.cpp  DataSource.h  FdDataSource.cpp  FdDataSource.h  RingDataSource.h  SourceSelector.cpp  SourceSelector.h  StreamDataSource.cpp  StreamDataSource.h  URL.h
docs/: CMakeLists.txt  UserAndRef.xml
examples/: CMakeLists.txt
examples/evtdump/: CMakeLists.txt  DataSource.cpp  DataSource.h  FdDataSource.cpp  FdDataSource.h  RingDataSource.cpp  RingDataSource.h  StreamDataSource.cpp  StreamDataSource.h  URL.cpp  dumperargs.ggo  evtdump.cpp
python/: CMakeLists.txt  format_Module.cpp  format_abnormalend.cpp  format_abnormalend.h  format_event.cpp  format_event.h  format_eventcount.cpp  format_eventcount.h  format_factory.cpp  format_factory.h  format_glomparams.cpp  format_glomparams.h  format_ringfragment.cpp  format_ringfragment.h  format_ringitem.cpp  format_ringitem.h  format_scaler.cpp  format_scaler.h  format_selector.cpp  format_statechange.cpp  format_statechange.h  format_textlist.cpp  format_textlist.h  format_version.cpp  format_version.h
v10/: CMakeLists.txt  CPhysicsEventItem.cpp  CPhysicsEventItem.h  CRingFragmentItem.cpp  CRingFragmentItem.h  CRingItem.cpp  CRingItem.h  CRingPhysicsEventCountItem.cpp  CRingPhysicsEventCountItem.h  CRingScalerItem.cpp  CRingScalerItem.h  CRingStateChangeItem.cpp  CRingStateChangeItem.h  CRingTextItem.cpp  CRingTextItem.h  DataFormat.h  RingItemFactory.cpp  RingItemFactory.h  v10counttests.cpp  v10factorytests.cpp  v10fragtests.cpp  v10phystests.cpp  v10rbuftests.cpp  v10scalertests.cpp  v10statetests.cpp  v10txttests.cpp
v11/: CAbnormalEndItem.cpp  CAbnormalEndItem.h  CDataFormatItem.cpp  CDataFormatItem.h  CGlomParameters.cpp  CGlomParameters.h  CMakeLists.txt  CPhysicsEventItem.cpp  CPhysicsEventItem.h  CRingFragmentItem.cpp  CRingFragmentItem.h  CRingItem.cpp  CRingItem.h  CRingPhysicsEventCountItem.cpp  CRingPhysicsEventCountItem.h  CRingScalerItem.cpp  CRingScalerItem.h  CRingStateChangeItem.cpp  CRingStateChangeItem.h  CRingTextItem.cpp  CRingTextItem.h  CUnknownFragment.cpp  CUnknownFragment.h  DataFormat.h  RingItemFactory.cpp  RingItemFactory.h  v11abendtests.cpp  v11counttests.cpp  v11dfmttests.cpp  v11eventtests.cpp  v11factoryTests.cpp  v11fragtests.cpp  v11glomtests.cpp  v11ringtests.cpp  v11sctests.cpp  v11statetest.cpp  v11texttests.cpp  v11unktests.cpp
v12/: CAbnormalEndItem.cpp  CAbnormalEndItem.h  CDataFormatItem.cpp  CDataFormatItem.h  CGlomParameters.cpp  CGlomParameters.h  CMakeLists.txt  CPhysicsEventItem.cpp  CPhysicsEventItem.h  CRingFragmentItem.cpp  CRingFragmentItem.h  CRingItem.cpp  CRingItem.h  CRingPhysicsEventCountItem.cpp  CRingPhysicsEventCountItem.h  CRingScalerItem.cpp  CRingScalerItem.h  CRingStateChangeItem.cpp  CRingStateChangeItem.h  CRingTextItem.cpp  CRingTextItem.h  CUnknownFragment.cpp  CUnknownFragment.h  DataFormat.h  RingItemFactory.cpp  RingItemFactory.h  TestRunner.cpp  v12abend.cpp  v12counttests.cpp  v12factorytests.cpp  v12fmttests.cpp  v12fragtests.cpp  v12glomtests.cpp  v12phystests.cpp  v12ringtest.cpp  v12scltests.cpp  v12statetests.cpp  v12texttests.cpp
